--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ sidebar-avatar: /img/avatar-m      # use absolute URL, seeing it's used in both 
 # SNS settings
 RSS: false
 # weibo_username:     username
-zhihu_username:     天马行空
+zhihu_username:     tianmaxingkong
 github_username:    maoxian777
 facebook_username:  username
 jianshu_username:   username
